2015-09-09  François  <francois@dechelle.net>

	* implemented info using IPC for remote scan daemon; tested with uhuru-info --xml

	* changed structure uhuru_info & co to drop use of struct tm and have a string containing UTC datetime in ISO 8601 format

2015-09-07  François  <francois@dechelle.net>

	* going on with uhuru_info implementation; compiles ok

2015-09-04  François  <francois@dechelle.net>

	* changed module API for module information: moved structure out of struct uhuru_module, to allow IPC calls without the filled module structure

2015-09-02  François  <francois@dechelle.net>

	* changed date field to use a struct tm instead of a string; clamav datetime parsing nightmare...

	* added first implementation of base information query for modules; tested for clamav

2015-09-01  François  <francois@dechelle.net>

	* tested and debugged new binary IPC; uhuru-scan works ok

2015-08-31  François  <francois@dechelle.net>

	* finished replacing old IPC protocol with new binary implementation; not tested yet with scan daemon

	* finished new implementation of ipc with handlers; unit tests work

2015-08-29  François  <francois@dechelle.net>

	* tested new implementation of ipc; unit tests work; handler calling not yet implemented

2015-08-27  François  <francois@dechelle.net>

	* tested implementation of new configuration and new modules API; works with clamav

2015-08-25  François  <francois@dechelle.net>

	* completed implementation of new configuration; not tested yet

	* pushed the configuration parser code to its own file

	* changed signature of set/get configuration functions; now argv is NULL terminated, remove argc argument

2015-08-24  François  <francois@dechelle.net>

	* implementing new config system: changed internal modules and clamav module to use configuration table; in progress
